fixes align

--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -128,7 +128,7 @@ main {
 
   @include breakpoint(desktop) {
     display: inline-block;
-    text-align: left;
+    //text-align: left;
     margin-bottom: 35px;
   }
 
